--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
   ],
   "compilerOptions": {
     "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "jsxImportSource": "solid-js",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   }
 }
