--- a/package.json
+++ b/package.json
@@ -14,20 +14,32 @@
     "@astrojs/node": "9.0.0-beta.2",
     "@astrojs/solid-js": "4.4.2",
     "@astrojs/tailwind": "5.1.2",
+    "@nanostores/solid": "0.5.0",
     "@suid/icons-material": "0.8.1",
     "@suid/material": "0.18.0",
     "astro": "5.0.0-beta.5",
     "astro-icon": "1.1.1",
+    "corvu": "0.7.1",
     "dayjs": "1.11.13",
+    "dotenv": "16.4.5",
+    "drizzle-orm": "0.35.3",
     "es-toolkit": "1.26.1",
+    "motion": "10.18.0",
+    "pg": "8.13.1",
     "solid-js": "1.9.3",
-    "tailwindcss": "3.4.14"
+    "solid-sonner": "0.2.8",
+    "tailwindcss": "3.4.14",
+    "valibot": "0.42.1"
   },
   "devDependencies": {
+    "@corvu/tailwind": "0.1.5",
     "@iconify-icon/solid": "2.1.1",
     "@suid/vite-plugin": "0.3.1",
+    "@types/pg": "8.11.10",
+    "drizzle-kit": "0.26.2",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
+    "tsx": "4.19.1",
     "typescript": "5.6.3",
     "vite-plugin-solid-svg": "0.8.1"
   }
