--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@astrojs/node": "9.0.0-beta.2",
     "@astrojs/solid-js": "4.4.2",
     "@astrojs/tailwind": "5.1.2",
+    "@kobalte/core": "0.13.7",
     "@nanostores/solid": "0.5.0",
     "@suid/icons-material": "0.8.1",
     "@suid/material": "0.18.0",
+    "ag-grid-community": "32.3.0",
     "astro": "5.0.0-beta.5",
     "astro-icon": "1.1.1",
     "corvu": "0.7.1",
@@ -25,7 +27,11 @@
     "drizzle-orm": "0.35.3",
     "es-toolkit": "1.26.1",
     "motion": "10.18.0",
+    "nanoid": "5.0.7",
+    "nanostores": "0.11.3",
+    "nodemailer": "6.9.15",
     "pg": "8.13.1",
+    "solid-ag-grid": "0.0.100",
     "solid-js": "1.9.3",
     "solid-sonner": "0.2.8",
     "tailwindcss": "3.4.14",
