--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "solid-ag-grid": "0.0.100",
     "solid-js": "1.9.3",
     "solid-sonner": "0.2.8",
+    "tailwind-merge": "2.5.4",
     "tailwindcss": "3.4.14",
     "valibot": "0.42.1"
   },
