--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nanostores/solid": "0.5.0",
     "@suid/icons-material": "0.8.1",
     "@suid/material": "0.18.0",
+    "@tanstack/solid-virtual": "3.10.8",
     "ag-grid-community": "32.3.1",
     "astro": "5.0.0-beta.5",
     "astro-icon": "1.1.1",
