--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@suid/icons-material": "0.8.1",
     "@suid/material": "0.18.0",
     "@tanstack/solid-virtual": "3.10.8",
-    "ag-grid-community": "32.3.1",
+    "ag-grid-community": "32.3.2",
     "astro": "5.0.0-beta.5",
     "astro-icon": "1.1.1",
     "corvu": "0.7.1",
@@ -27,6 +27,7 @@
     "dotenv": "16.4.5",
     "drizzle-orm": "0.36.0",
     "es-toolkit": "1.26.1",
+    "lru-cache": "11.0.2",
     "motion": "10.18.0",
     "nanoid": "5.0.8",
     "nanostores": "0.11.3",
@@ -44,7 +45,7 @@
     "@iconify-icon/solid": "2.1.1",
     "@suid/vite-plugin": "0.3.1",
     "@types/pg": "8.11.10",
-    "drizzle-kit": "0.27.0",
+    "drizzle-kit": "0.27.1",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
     "tsx": "4.19.2",
