--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@suid/material": "0.18.0",
     "ag-grid-community": "32.3.2",
     "astro": "5.0.0-beta.6",
-    "astro-icon": "1.1.1",
+    "astro-icon": "1.1.2",
+    "clsx": "2.1.1",
     "corvu": "0.7.1",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
-    "drizzle-orm": "0.36.0",
-    "es-toolkit": "1.26.1",
+    "drizzle-orm": "0.36.1",
+    "es-toolkit": "1.27.0",
     "lru-cache": "11.0.2",
-    "motion": "10.18.0",
+    "motion": "11.11.14",
     "nanoid": "5.0.8",
     "nanostores": "0.11.3",
     "nodemailer": "6.9.16",
@@ -44,7 +45,7 @@
     "@iconify-icon/solid": "2.1.1",
     "@suid/vite-plugin": "0.3.1",
     "@types/pg": "8.11.10",
-    "drizzle-kit": "0.27.1",
+    "drizzle-kit": "0.28.0",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
     "tsx": "4.19.2",
